# ChangeLog for gnome-extra/zeitgeist-datasources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zeitgeist-datasources/ChangeLog,v 1.14 2013/04/18 07:53:39 jlec Exp $

  18 Apr 2013; Justin Lecher <jlec@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Add sane fix for bzr icon file collistion, #465918

  07 Apr 2013; Justin Lecher <jlec@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild, metadata.xml:
  Make all ebuilds use vala.eclass, #463720; fix file collision with
  dev-vcs/bzr-gtk, #417661

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Add ~arm, wrt bug #449220

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Add ~ppc, wrt bug #449220

  05 Sep 2012; Justin Lecher <jlec@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Depend on python support in vim, #433966 & #411867

  21 May 2012; Justin Lecher <jlec@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Drop broken firefox support for removal of xulrunner, #415039

  15 Feb 2012; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add long description

  15 Feb 2012; Justin Lecher <jlec@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Depend on apps upstream zeitgeist support instead of providing extra ones

  07 Feb 2012; Mike Gilbert <floppym@gentoo.org>
  zeitgeist-datasources-0.8.0.1.ebuild:
  Inherit multilib.

*zeitgeist-datasources-0.8.0.1 (01 Feb 2012)
