@@ -24,6 +24,7 @@ datahub does not track events like opening websites etc.
     <flag name="xchat">Zeitgeist plugin for <pkg>net-irc/xchat-gnome</pkg> as data source</flag>
     <flag name="rhythmbox">Zeitgeist plugin for <pkg>media-sound/rhythmbox</pkg> as data source</flag>
     <flag name="firefox">Zeitgeist plugin for <pkg>www-client/firefox</pkg> as data source</flag>
+    <flag name="thunderbird">Zeitgeist plugin for <pkg>mail-client/thunderbird</pkg> as data source</flag>
     <flag name="totem">Zeitgeist plugin for <pkg>media-video/totem</pkg> as data source</flag>
   </use>
 </pkgmetadata>
