@@ -1,6 +1,13 @@
 # ChangeLog for gnome-extra/zeitgeist-datasources
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zeitgeist-datasources/ChangeLog,v 1.14 2013/04/18 07:53:39 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/zeitgeist-datasources/ChangeLog,v 1.15 2013/04/30 16:41:26 jlec Exp $
+
+*zeitgeist-datasources-0.8.1 (30 Apr 2013)
+
+  30 Apr 2013; Justin Lecher <jlec@gentoo.org>
+  zeitgeist-datasources-0.8.0.1.ebuild, +zeitgeist-datasources-0.8.1.ebuild,
+  metadata.xml:
+  vala_depend is a function not a variable; Version Bump
 
   18 Apr 2013; Justin Lecher <jlec@gentoo.org>
   zeitgeist-datasources-0.8.0.1.ebuild:
